--- a/src/components/2-MovieCard.css
+++ b/src/components/2-MovieCard.css
@@ -1,9 +1,9 @@
 .MovieCard {
   /* border: 1px solid red; */
   width: 60%;
-  margin: 20px auto;
-  min-height: 40px;
-  margin-bottom: 10rem;
+  margin: 0 auto;
+  /* min-height: 40px; */
+  margin-bottom: 3rem;
   font-family: Lato,sans-serif;
 }
 
